# HiveForge

./: .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  Dockerfile  README.md  colonyforge.config.yaml  docker-compose.vlm-gpu.yml  docker-compose.vlm.yml  docker-compose.yml  hiveforge.config.yaml  mkdocs.yml  pyproject.toml  コンセプト_v3.md
.devcontainer/: Dockerfile.dev  Dockerfile.playwright-mcp  devcontainer.json  docker-compose.dev.yml  start-ollama.sh
.devcontainer/certs/: cert.pem  key.pem
.github/workflows/: ci.yml  e2e.yml
Vault/01KG8ZEKK9GBX699N5MF5ZT74N/: events.jsonl
Vault/01KG8ZTQMVRMZ1PPZBYFSKZKV1/: events.jsonl
Vault/01KG94RXV7GM1PPMR59XACRW11/: events.jsonl
Vault/01KG962SS3SX2ZTY388RKDE3CS/: events.jsonl
Vault/01KG96KF8PP4EX18EBYXYR4YA5/: events.jsonl
Vault/01KG9ZT36F4HM0J59MYY38Z7R8/: events.jsonl
Vault/01KG9ZY3BXN9SZS2T8HEJ7Z0NN/: events.jsonl
Vault/01KGA1SXD0G620ZWSFT1CV5435/: events.jsonl
Vault/01KGA1TQ6APWD4TDQAQPD87PE4/: events.jsonl
docs/: ARCHITECTURE.md  DEVELOPMENT_PLAN_v1.md  DEVELOPMENT_PLAN_v2.md  GIT_WORKFLOW.md  IMPLEMENTATION_STATUS.md  PHASE2_PREP.md  QUICKSTART.md  ROADMAP.md  SESSION_STATUS.md  VLM_TESTER.md  index.ja.md  index.md  コンセプト.md  コンセプト_v4.md  コンセプト_v5.md  コンセプト_v6.md
docs/architecture/: configuration.ja.md  configuration.md  events.ja.md  events.md  index.ja.md  index.md
docs/archive/: DEVELOPMENT_PLAN_v1.md  IMPLEMENTATION_STATUS.md  PHASE2_PREP.md  ROADMAP.md  SESSION_STATUS.md  TECH_DEBT.md  phase1-issues.md  コンセプト_v3.md  コンセプト_v4.md  コンセプト_v5.md
docs/design/: M5-4_hive_monitor_unification.md  requirement-analysis-colony.md  v5-hive-design.md
docs/development/: contributing.ja.md  contributing.md  git-workflow.ja.md  git-workflow.md  index.ja.md  index.md  testing.ja.md  testing.md
docs/getting-started/: index.ja.md  index.md  installation.ja.md  installation.md  quickstart.ja.md  quickstart.md
docs/guide/: agents.ja.md  agents.md  cli.ja.md  cli.md  concepts.ja.md  concepts.md  dashboard.ja.md  dashboard.md  index.ja.md  index.md  mcp-tools.ja.md  mcp-tools.md
docs/issues/: 001-lineage-auto-parents.md  phase1-issues.md
docs/reference/: api.ja.md  api.md  index.ja.md  index.md
reqs/: .doorstop.yml
scripts/: colonyforge_demo.html  experiment_beekeeper_chain.py  hiveforge_demo.html  kpi_dashboard_preview.html  seed_hive_monitor.py  setup-wsl-docker.sh  start-wsl-docker.cmd  test-vlm-connection.py  test_agent_ui.py  test_colonyforge_extension_simple.py  test_hiveforge_extension_simple.py  test_vlm_tester.py  test_vlm_tester_local.py  vlm-env.sh
src/colonyforge/: __init__.py  cli.py  monitor.py  silence.py
src/colonyforge/agent_ui/: __init__.py  handlers.py  server.py  session.py
src/colonyforge/api/: __init__.py  auth.py  helpers.py  server.py
src/colonyforge/beekeeper/: conference.py  conflict.py  handler.py  hive_handlers.py  llm_integration.py  projection.py  queen_delegation.py  ra_integration.py  resolver.py  server.py  user_handlers.py
src/colonyforge/core/: __init__.py  config.py  lineage.py  policy_gate.py  rate_limiter.py
src/colonyforge/forager_bee/: anomaly_detector.py  explorer.py  models.py  reporter.py  scenario_generator.py
src/colonyforge/guard_bee/: __init__.py  models.py  verifier.py
src/colonyforge/llm/: client.py  prompt_config.py  prompts.py  runner.py  tools.py
src/colonyforge/mcp_server/: __init__.py  server.py  tools.py
src/colonyforge/monitor/: __init__.py  api_client.py  constants.py  formatter.py  routing.py  runner.py  sse.py  tmux_layout.py
src/colonyforge/prompts/: __init__.py  agents.py  loader.py  task_decomposition.py  vlm.py
src/colonyforge/queen_bee/: approval.py  communication.py  execution.py  orchestrator.py  pipeline.py  pipeline_execution.py  planner.py  result.py  retry.py  server.py  task_runner.py
src/colonyforge/referee_bee/: __init__.py  scoring.py  tournament.py
src/colonyforge/requirement_analysis/: __init__.py  assumption_mapper.py  change_tracker.py  clarify_generator.py  context_forager.py  gate.py  impact_analyzer.py  intent_miner.py  models.py  orchestrator.py  referee_comparer.py  scorer.py  (+3 more)
src/hiveforge/: __init__.py  cli.py  silence.py
tests/: conftest.py  test_action_class.py  test_activity_api.py  test_activity_bus.py  test_activity_integration.py  test_agent_chain.py  test_agent_ui.py  test_api.py  test_approval_flow_e2e.py  test_ar.py  test_ask_user.py  test_auth.py  test_beekeeper.py  test_beekeeper_api.py  test_beekeeper_queen_delegation.py  test_beekeeper_ra_integration.py  test_beekeeper_server.py  test_benchmark.py  test_chat_chain.py  test_cli.py  test_colony_api.py  test_colony_mcp.py  test_colony_progress.py  test_conference.py  test_conference_api.py  test_conference_events.py  test_conference_mcp.py  test_config.py  test_conflict_detection.py  test_conflict_events.py  test_coverage_gaps.py  test_decision_events.py  test_decision_protocol.py  test_events.py  test_failure_timeout.py  test_forager_bee.py  test_github_client.py  test_github_mcp.py  test_github_projection.py  test_guard_bee.py  (+67 more)
tests/e2e/: __init__.py  conftest.py  hiveforge_demo.html  kpi_dashboard_test.html  test_agent_chain_llm.py  test_colonyforge_extension.py  test_colonyforge_visual.py  test_github_projection_e2e.py  test_hive_flow.py  test_hive_monitor_real.py  test_hiveforge_extension.py  test_hiveforge_visual.py  test_kpi_dashboard_visual.py  vlm_visual_evaluator.py
vscode-extension/: eslint.config.mjs  package-lock.json  package.json  tsconfig.json
vscode-extension/src/: chatHandler.ts  client.ts  extension.ts
(+287 files in other folders)
