[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "hiveforge"
version = "0.1.0"
description = "HiveForge - 自律型ソフトウェア組立システム"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [
    { name = "HiveForge Team" }
]
keywords = ["ai", "automation", "mcp", "llm"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "python-ulid>=2.2.0",
    "portalocker>=2.8.0",
    "jcs>=0.2.0",
    "httpx>=0.26.0",
    "openai>=1.10.0",
    "mcp>=1.0.0",
    "python-dotenv>=1.0.0",
    "pyyaml>=6.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.1.0",
    "mypy>=1.8.0",
    "types-PyYAML>=6.0.0",
]

[project.scripts]
hiveforge = "hiveforge.cli:main"

[project.urls]
Homepage = "https://github.com/your-org/hiveforge"
Documentation = "https://github.com/your-org/hiveforge#readme"
Repository = "https://github.com/your-org/hiveforge"

[tool.hatch.build.targets.wheel]
packages = ["src/hiveforge"]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "C4", "SIM"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
strict = true
plugins = ["pydantic.mypy"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
